[package]
name = "fwlib-rust"
version = "0.1.0"
authors = ["Sam Zagrobelny <strangesast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.6"

[build-dependencies]
bindgen = "0.56.0"
libloading = "0.6.6"
